--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socket-chat-example",
+  "name": "tektodialektic",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "for glen's hackathon",
   "dependencies": {
     "express": "^4.15.2",
     "socket.io": "^1.7.3"
